Eliminate warning